--- a/gb/19/12/11/n11715575.md
+++ b/gb/19/12/11/n11715575.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yjkpec3005/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yjkpec3005/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yjkpec3005/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yjkpec3005/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yjkpec3005/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yjkpec3005/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yjkpec3005/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yjkpec3005/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yjkpec3005/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yjkpec3005/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yjkpec3005/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yjkpec3005/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yjkpec3005/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yjkpec3005/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yjkpec3005/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yjkpec3005/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yjkpec3005/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yjkpec3005/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yjkpec3005/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yjkpec3005/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yjkpec3005/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yjkpec3005/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yjkpec3005/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yjkpec3005/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yjkpec3005/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yjkpec3005/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yjkpec3005/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yjkpec3005/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yjkpec3005/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yjkpec3005/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yjkpec3005/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yjkpec3005/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yjkpec3005/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yjkpec3005/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yjkpec3005/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yjkpec3005/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yjkpec3005/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yjkpec3005/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yjkpec3005/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yjkpec3005/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yjkpec3005/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yjkpec3005/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yjkpec3005/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yjkpec3005/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yjkpec3005/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yjkpec3005/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yjkpec3005/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>猴子界的大明星 日本雪猴玩雪球、泡温泉萌翻网友</h2>
-<a href="https://d2tha3bwxphnwp.cloudfront.net/H7lJCMiBl"><img width="600" src="https://raw.githubusercontent.com/yjkpec3005/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/yjkpec3005/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d2rhftayg1puwj.cloudfront.net/T1mJCMiBs"><img width="600" src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6></h6>
 <hr>
-	<p>【大纪元2019年12月11日讯】（大纪元记者嫣华综合报导）生活在雪地里的<ahref="https://github.com/yjkpec3005/djy/blob/master/gb/tag/%E6%97%A5%E6%9C%AC%E9%9B%AA%E7%8C%B4.md#1">日本雪猴</a><ahref="https://github.com/yjkpec3005/djy/blob/master/gb/tag/%E6%97%A5%E6%9C%AC%E7%8C%95%E7%8C%B4.md#1">日本猕猴</a>Macaca fuscata），它们有一身绵密又长的美丽毛发，在雪地里觅食、嬉戏和进行活动是它们的日常，除此之外，<ahref="https://github.com/yjkpec3005/djy/blob/master/gb/tag/%E6%97%A5%E6%9C%AC%E9%9B%AA%E7%8C%B4.md#1">日本雪猴</a>还以<ahref="https://github.com/yjkpec3005/djy/blob/master/gb/tag/%E6%B3%A1%E6%B8%A9%E6%B3%89.md#1">泡温泉</a>打响了它们的知名度，堪称举世闻名的猴子界大明星。</p>
+	<p>【大纪元2019年12月11日讯】（大纪元记者嫣华综合报导）生活在雪地里的<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%97%A5%E6%9C%AC%E9%9B%AA%E7%8C%B4.md#1">日本雪猴</a><ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%97%A5%E6%9C%AC%E7%8C%95%E7%8C%B4.md#1">日本猕猴</a>Macaca fuscata），它们有一身绵密又长的美丽毛发，在雪地里觅食、嬉戏和进行活动是它们的日常，除此之外，<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%97%A5%E6%9C%AC%E9%9B%AA%E7%8C%B4.md#1">日本雪猴</a>还以<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%B3%A1%E6%B8%A9%E6%B3%89.md#1">泡温泉</a>打响了它们的知名度，堪称举世闻名的猴子界大明星。</p>
 <p>一名网友拍到一只雪猴宝宝在雪地里玩雪球的照片，它不但把雪球搓得很圆，而且还拿着雪球放在雪地上滚动；一批生长在1998年举办冬奥会的多雪山区长野，用它们敏捷矫健的脚力行走在堆积如同雪糕一般的雪地上，在其间活动可以说是它们的日常。</p>
-<p><center><a src=""></a><a href="https://d2tha3bwxphnwp.cloudfront.net/H7lJCMiBl"><img width="600" src="https://raw.githubusercontent.com/yjkpec3005/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/yjkpec3005/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/qQzCNW-KuCs" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
+<p><center><a src=""></a><a href="https://d2rhftayg1puwj.cloudfront.net/T1mJCMiBs"><img width="600" src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/qQzCNW-KuCs" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
 <h2><span style="color: #008000;"><strong>一洗成名的日本雪猴</strong></span></h2>
-<p>它们的栖息地之一在日本<ahref="https://github.com/yjkpec3005/djy/blob/master/gb/tag/%E9%95%BF%E9%87%8E%E5%9C%B0%E7%8B%B1%E8%B0%B7.md#1">长野地狱谷</a>，当地盛产天然温泉，在1963年，人们看到一只年轻的母猴子跑到当地酒店内的一个温泉池内泡澡，因为头一次看到猴子也会洗温泉，所以很多人感到万分惊讶。</p>
-<p>虽然长野山区有很多天然温泉，但为什么从来没看过雪猴在野外<ahref="https://github.com/yjkpec3005/djy/blob/master/gb/tag/%E6%B3%A1%E6%B8%A9%E6%B3%89.md#1">泡温泉</a>，反而跑到酒店里去泡温泉呢？</p>
+<p>它们的栖息地之一在日本<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E9%95%BF%E9%87%8E%E5%9C%B0%E7%8B%B1%E8%B0%B7.md#1">长野地狱谷</a>，当地盛产天然温泉，在1963年，人们看到一只年轻的母猴子跑到当地酒店内的一个温泉池内泡澡，因为头一次看到猴子也会洗温泉，所以很多人感到万分惊讶。</p>
+<p>虽然长野山区有很多天然温泉，但为什么从来没看过雪猴在野外<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%B3%A1%E6%B8%A9%E6%B3%89.md#1">泡温泉</a>，反而跑到酒店里去泡温泉呢？</p>
 </p>
 <p>&nbsp;</p>
-<blockquote class=""></blockquote><a href="https://d2tha3bwxphnwp.cloudfront.net/H7lJCMiBl"><img width="600" src="https://raw.githubusercontent.com/yjkpec3005/www/master/t/ntdtv/ins.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(instagram视频或图片.国内建议下载<a href="https://github.com/yjkpec3005/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><blockquote class="instagram-media" style="background: #FFF; border: 0; border-radius: 3px; box-shadow: 0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width: 540px; min-width: 326px; padding: 0; width: calc(100% - 2px);" data-instgrm-permalink="https://www.instagram.com/p/BP3Y43XBYrA/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12">
+<blockquote class=""></blockquote><a href="https://d2rhftayg1puwj.cloudfront.net/T1mJCMiBs"><img width="600" src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/ntdtv/ins.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(instagram视频或图片.国内建议下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><blockquote class="instagram-media" style="background: #FFF; border: 0; border-radius: 3px; box-shadow: 0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width: 540px; min-width: 326px; padding: 0; width: calc(100% - 2px);" data-instgrm-permalink="https://www.instagram.com/p/BP3Y43XBYrA/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12">
 <div style="padding: 16px;">
 <div style="display: flex; flex-direction: row; align-items: center;"></div>
 <div style="padding: 19% 0;"></div>
@@ -32,7 +32,7 @@
 <p>据专家分析，山区的天然温泉往往温度很高，有的还超过了华氏140度（约合摄氏60度），如此高的温度显然对猴子而言不适用。而酒店内温泉的池水已降温在合适的温度了。</p>
 </p>
 <p>&nbsp;</p>
-<blockquote class=""></blockquote><a href="https://d2tha3bwxphnwp.cloudfront.net/H7lJCMiBl"><img width="600" src="https://raw.githubusercontent.com/yjkpec3005/www/master/t/ntdtv/ins.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(instagram视频或图片.国内建议下载<a href="https://github.com/yjkpec3005/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><blockquote class="instagram-media" style="background: #FFF; border: 0; border-radius: 3px; box-shadow: 0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width: 540px; min-width: 326px; padding: 0; width: calc(100% - 2px);" data-instgrm-permalink="https://www.instagram.com/p/BR3ISJJDBJD/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12">
+<blockquote class=""></blockquote><a href="https://d2rhftayg1puwj.cloudfront.net/T1mJCMiBs"><img width="600" src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/ntdtv/ins.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(instagram视频或图片.国内建议下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><blockquote class="instagram-media" style="background: #FFF; border: 0; border-radius: 3px; box-shadow: 0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width: 540px; min-width: 326px; padding: 0; width: calc(100% - 2px);" data-instgrm-permalink="https://www.instagram.com/p/BR3ISJJDBJD/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12">
 <div style="padding: 16px;">
 <div style="display: flex; flex-direction: row; align-items: center;"></div>
 <div style="padding: 19% 0;"></div>
@@ -49,56 +49,50 @@
 <p><a async src="//www.instagram.com/embed.js"></a>
 <p>&nbsp;</p>
 <p>那只跑到酒店泡过温泉澡的聪明母猴肯定觉得很享受，于是回去跟亲朋好友走马相告后，大伙开始三三两两陆续的都跑到酒店去泡澡。</p>
-<p><center><a src=""></a><a href="https://d2tha3bwxphnwp.cloudfront.net/H7lJCMiBl"><img width="600" src="https://raw.githubusercontent.com/yjkpec3005/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/yjkpec3005/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/txDR1y1drl0" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></center>在酒店方面，起初游客对新加入的一两只猴子感到很好奇，但后来多了之后，逐渐演变成麻烦和担忧健康威胁的问题；于是在1964年开始建造了一座温泉公园，而里面温泉池水的温度保持在舒适的华氏104度（约摄氏40度），专供猴子专用。</p>
-<p><center><a src=""></a><a href="https://d2tha3bwxphnwp.cloudfront.net/H7lJCMiBl"><img width="600" src="https://raw.githubusercontent.com/yjkpec3005/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/yjkpec3005/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/vSCFgrnalJA" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></center>1970年LIFE杂志在其封面上刊登了一张泡温泉澡猴子的相片，让这群日本雪猴瞬间爆红，成为全世界知名的动物明星；从那时起，来自世界各地的游客不辞辛苦的，千里迢迢跑到那里和著名的雪猴共度时光。</p>
-<p><center><a src=""></a><a href="https://d2tha3bwxphnwp.cloudfront.net/H7lJCMiBl"><img width="600" src="https://raw.githubusercontent.com/yjkpec3005/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/yjkpec3005/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/lHZiN2g6u24" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></center>到如今，常看到网友分享他们到日本<ahref="https://github.com/yjkpec3005/djy/blob/master/gb/tag/%E9%95%BF%E9%87%8E%E5%9C%B0%E7%8B%B1%E8%B0%B7.md#1">长野地狱谷</a>看雪猴泡澡的旅游行程；还说那里的猴子看到围观在旁边的一大批游客，竟然专程跑来看自己洗澡时，一点也不在乎，不但不会怕人，而且也不埋人，依然悠游自在的陶醉在它们的沐浴时光。</p>
+<p><center><a src=""></a><a href="https://d2rhftayg1puwj.cloudfront.net/T1mJCMiBs"><img width="600" src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/txDR1y1drl0" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></center>在酒店方面，起初游客对新加入的一两只猴子感到很好奇，但后来多了之后，逐渐演变成麻烦和担忧健康威胁的问题；于是在1964年开始建造了一座温泉公园，而里面温泉池水的温度保持在舒适的华氏104度（约摄氏40度），专供猴子专用。</p>
+<p><center><a src=""></a><a href="https://d2rhftayg1puwj.cloudfront.net/T1mJCMiBs"><img width="600" src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/vSCFgrnalJA" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></center>1970年LIFE杂志在其封面上刊登了一张泡温泉澡猴子的相片，让这群日本雪猴瞬间爆红，成为全世界知名的动物明星；从那时起，来自世界各地的游客不辞辛苦的，千里迢迢跑到那里和著名的雪猴共度时光。</p>
+<p><center><a src=""></a><a href="https://d2rhftayg1puwj.cloudfront.net/T1mJCMiBs"><img width="600" src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/lHZiN2g6u24" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></center>到如今，常看到网友分享他们到日本<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E9%95%BF%E9%87%8E%E5%9C%B0%E7%8B%B1%E8%B0%B7.md#1">长野地狱谷</a>看雪猴泡澡的旅游行程；还说那里的猴子看到围观在旁边的一大批游客，竟然专程跑来看自己洗澡时，一点也不在乎，不但不会怕人，而且也不埋人，依然悠游自在的陶醉在它们的沐浴时光。</p>
 <p>责任编辑：茉莉</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yjkpec3005/djy/blob/master/gb/21/9/1/n13202102.md#1">昆州卡车司机封锁道路抗议疫苗强制令 　　</a></li>
-<li><a href="https://github.com/yjkpec3005/djy/blob/master/gb/21/9/27/n13265021.md#1">首都行政区政府拒绝强制医疗人员接种疫苗</a></li>
-<li><a href="https://github.com/yjkpec3005/djy/blob/master/gb/21/9/28/n13266760.md#1">西澳推行在校内给学生打疫苗</a></li>
-<li><a href="https://github.com/yjkpec3005/djy/blob/master/gb/21/9/28/n13266874.md#1">西澳一幼儿园强制员工打疫苗? 全澳首家</a></li>
-<li><a href="https://github.com/yjkpec3005/djy/blob/master/gb/21/10/3/n13277439.md#1">前工党领袖支持强制所有议员打疫苗</a></li>
-<li><a href="https://github.com/yjkpec3005/djy/blob/master/gb/21/10/3/n13277611.md#1">维州强制百万人打疫苗政策引发抗议  逾百人被捕</a></li>
-<li><a href="https://github.com/yjkpec3005/djy/blob/master/gb/21/10/4/n13279818.md#1">澳副总理反对强制议员打疫苗</a></li>
-<li><a href="https://github.com/yjkpec3005/djy/blob/master/gb/21/10/5/n13282038.md#1">维州教师上庭挑战强制疫苗接种</a></li>
-<li><a href="https://github.com/yjkpec3005/djy/blob/master/gb/21/10/5/n13282794.md#1">ACT预算案：推动就业重振经济 建设更多公房</a></li>
-<li><a href="https://github.com/yjkpec3005/djy/blob/master/gb/21/10/6/n13284985.md#1">悉尼私校要家长提交全家疫苗接种证明</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738480.md#1">美中期选举周二初选繁忙 七场选赛抢先看</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741274.md#1">观察家：若拜登取消对华关税 将是政策失误</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741348.md#1">研究创建国家级亚太裔博物馆 参议院通过</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741314.md#1">成本飙涨 纽约上州商团吁停止七项激进立法</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/1/n10752586.md#1" target="_blank">共产暴政录：毛泽东同学夏曦“肃反”创纪录</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/30/n7475135.md#1" target="_blank">公安医院院长的晚期胃癌怎么好的？</a></li><hr>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/5/n10280071.md#1" target="_blank">路目：孔子诛杀少正卯 惹恼了谁？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/24/n10804401.md#1" target="_blank">这些前中共警察所见证的奇迹</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/yjkpec3005/djy/blob/master/gb/21/9/30/n13272497.md#1">【百年真相】《何日君再来》引惨案 刘雪庵的悲剧人生</a></li>
-<li><a href="https://github.com/yjkpec3005/djy/blob/master/gb/21/10/1/n13273915.md#1">美国动物灵媒：小猫能跨越不同维度</a></li>
-<li><a href="https://github.com/yjkpec3005/djy/blob/master/gb/21/9/30/n13272446.md#1">【未解之谜】人体辉光的奥秘</a></li>
-<li><a href="https://github.com/yjkpec3005/djy/blob/master/gb/21/9/30/n13272470.md#1">璎珞：自佛国而来，尘世间最美的项链</a></li>
-<li><a href="https://github.com/yjkpec3005/djy/blob/master/gb/21/9/28/n13267369.md#1">【未解之谜】农场主女儿转生成闺蜜的女儿</a></li>
-<li><a href="https://github.com/yjkpec3005/djy/blob/master/gb/21/10/5/n13283996.md#1">【秦鹏直播】毒奶粉元凶将出狱？受害儿家长：痛心</a></li>
-<li><a href="https://github.com/yjkpec3005/djy/blob/master/gb/21/10/5/n13283969.md#1">【时事纵横】潘朵拉文件涉中共权贵 阿里上榜</a></li>
-<li><a href="https://github.com/yjkpec3005/djy/blob/master/gb/21/10/1/n13275161.md#1">【百年真相】耀眼明星的陨落 上官云珠坠楼真相</a></li>
-<li><a href="https://github.com/yjkpec3005/djy/blob/master/gb/21/10/4/n13281665.md#1">【远见快评】长津湖之战 隐藏多少谎言？</a></li>
-<li><a href="https://github.com/yjkpec3005/djy/blob/master/gb/21/10/4/n13281256.md#1">长津湖战役中共曾不敢提 如今吹捧藏何秘密</a></li>
-<li><a href="https://github.com/yjkpec3005/djy/blob/master/gb/21/10/3/n13278911.md#1">傅政华落马 北京警察曝其为何在公安内部招恨</a></li>
-<li><a href="https://github.com/yjkpec3005/djy/blob/master/gb/21/10/3/n13278687.md#1">网传25位封杀艺人名单 赵薇列政治类别首位</a></li>
-<li><a href="https://github.com/yjkpec3005/djy/blob/master/gb/21/10/4/n13279085.md#1">章子怡手机屏幕遭偷拍 桌布画面曝光</a></li>
-<li><a href="https://github.com/yjkpec3005/djy/blob/master/gb/21/10/4/n13281323.md#1">曾被马云问能否免费代言 黄渤回答获赞高情商</a></li>
-<li><a href="https://github.com/yjkpec3005/djy/blob/master/gb/21/10/4/n13281782.md#1">马伊琍无奈表心声：女演员需要具备“三高”</a></li>
-<li><a href="https://github.com/yjkpec3005/djy/blob/master/gb/21/10/3/n13278895.md#1">退出演艺圈13年 黎姿晒全家福庆50岁生日</a></li>
-<li><a href="https://github.com/yjkpec3005/djy/blob/master/gb/21/10/2/n13276849.md#1">浴巾多长时间洗一次？洗错当心感染皮肤病</a></li>
-<li><a href="https://github.com/yjkpec3005/djy/blob/master/gb/21/10/3/n13277822.md#1">3岁儿子自称前世死于车祸 美国妈妈被吓到</a></li>
-<li><a href="https://github.com/yjkpec3005/djy/blob/master/gb/21/10/5/n13282786.md#1">松鼠在一辆汽车里藏了几千颗胡桃 车主苦恼</a></li>
-<li><a href="https://github.com/yjkpec3005/djy/blob/master/gb/21/10/4/n13280112.md#1">真是好狗命 澳洲小狗坐飞机商务舱外加庆生</a></li>
-<li><a href="https://github.com/yjkpec3005/djy/blob/master/gb/21/10/4/n13279593.md#1">美7岁男童钓到鲈鱼 鳄鱼竟从水下窜出抢走</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738652.md#1">惠虎宇：500年风云变幻 俄罗斯帝国荣光不再</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740789.md#1">【拍案惊奇】李克强不再低调？从刘少奇说起</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/6/n13728957.md#1">【百年真相】给江青写恐吓信 林伯渠妻悲剧收场</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741038.md#1">受困上海封城近2月 李立群：若解封就返台退休</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734997.md#1">小豆蔻是印度“香料女王” 有5大好处</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yjkpec3005/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yjkpec3005/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/12/11/n11715575.htm">猴子界的大明星 日本雪猴玩雪球、泡温泉萌翻网友</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/12/11/n11715575.htm">猴子界的大明星 日本雪猴玩雪球、泡温泉萌翻网友</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yjkpec3005/djy/blob/master/gb/19/12/11/n11715575.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yjkpec3005/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjkpec3005/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yjkpec3005/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yjkpec3005/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yjkpec3005/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjkpec3005/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yjkpec3005/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjkpec3005/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yjkpec3005/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjkpec3005/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yjkpec3005/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjkpec3005/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yjkpec3005/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjkpec3005/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yjkpec3005/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjkpec3005/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yjkpec3005/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjkpec3005/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yjkpec3005/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjkpec3005/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yjkpec3005/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjkpec3005/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yjkpec3005/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjkpec3005/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yjkpec3005/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjkpec3005/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yjkpec3005/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjkpec3005/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yjkpec3005/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjkpec3005/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yjkpec3005/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjkpec3005/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yjkpec3005/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjkpec3005/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yjkpec3005/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjkpec3005/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yjkpec3005/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjkpec3005/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yjkpec3005/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjkpec3005/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yjkpec3005/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjkpec3005/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yjkpec3005/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjkpec3005/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yjkpec3005/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjkpec3005/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yjkpec3005/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjkpec3005/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/19/12/11/n11715575.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
